--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -79,14 +79,7 @@
                 <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
                     <h2>MUSEUM OF CANDY</h2>
                     <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
-                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae
-                        beatae, maiores deserunt
-                        in voluptatibus
-                        aspernatur architecto excepturi delectus soluta? Ipsa, deleniti dolorem hic consequatur
-                        repellat eveniet quidem
-                        voluptate necessitatibus dolorum delectus minus vitae, ut, veritatis sint ipsum magnam
-                        autem nam ex deserunt debitis
-                        eaque ratione! Nobis, quidem assumenda.</p>
+                    <p class="lead">Cotton candy pie oat cake I love. Marshmallow cake topping. Brownie halvah pastry cotton candy toffee lollipop halvah candy tiramisu. Halvah I love candy pie lollipop. Cheesecake halvah gummies marzipan. Sweet roll gingerbread bear claw pastry sweet cookie chocolate bar cake danish. Tootsie roll marzipan gummi bears I love liquorice muffin. Gummies oat cake marshmallow chocolate sesame snaps halvah. Icing I love halvah.</p>
                 </div>
             </div>
         </div>
@@ -103,24 +96,13 @@
               <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
                   <h2>MUSEUM OF CANDY</h2>
                   <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
-                  <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae
-                      beatae, maiores
-                      deserunt
-                      in voluptatibus
-                      aspernatur architecto excepturi delectus soluta? Ipsa, deleniti dolorem hic consequatur
-                      repellat eveniet
-                      quidem
-                      voluptate necessitatibus dolorum delectus minus vitae, ut, veritatis sint ipsum magnam
-                      autem nam ex deserunt
-                      debitis
-                      eaque ratione! Nobis, quidem assumenda.</p>
+                  <p class="lead">Jujubes pie jelly beans sesame snaps sweet roll. Jujubes cotton candy chocolate lemon drops chocolate bar brownie jelly beans. Caramels pudding dessert biscuit liquorice fruitcake. Icing powder I love bear claw dragée croissant lemon drops pastry. Croissant I love sesame snaps. Cake I love I love jelly-o apple pie. Topping sweet danish.</p>
               </div>
           </div>
       </div>
   </div>
 </section>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
